--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>First git io by softwareqae</title>
+    <title>Sqae.githib.io by softwareqae</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Sqae.githib.io</h1>
-          <h2>sqae githib io</h2>
+          <h1>First gitHub io</h1>
+          <h2>sqae</h2>
         </header>
 
         <section id="downloads" class="clearfix">
